- Renaming and reverse boolean `exception.uncaught` to `exception.handled` {pull}434[434].

==== Bug fixes
- Updated systemd doc url {pull}354[354]

==== Added
- Support for uploading sourcemaps {pull}302[302].
- app.environment {pull}366[366]
- Add context.request.url.full {pull}436[436]
- report more detail on max data size error {pull}442[442]
- Add transaction.id to errors {pull}437[437]

==== Deprecated

==== Known Issues



=== APM Server version 6.1
https://github.com/elastic/apm-server/compare/f9a2086ceed0b918e1a0b3d8ddc140fc21af0e74\...421db9d1e10935e7b9aec00b64cf66ad2d50d797[View commits]

==== Breaking changes
- Allow ES template index prefix to be `apm` {pull}152[152].
- Remove `git_ref` from Intake API and Elasticsearch output {pull}158[158].
- Switch to Go 1.9.2

==== Bug fixes
- Fix dashboard loading for Kibana 5x {pull}221[221].
- Fix command for loading dashboards in docs {pull}205[205].
- Log a warning message if secret token is set but ssl is not {pull}204[204].
- Fix wrong content-type in response {pull}171[171].
- Remove duplicate dashboard entries {pull}162[162].
- Remove `context.db` from `fields.yml` for consistency, has not been indexed before {pull}159[159].
- Updated systemd doc url {pull}354[354]
- Update dashboard with fix for rpm graphs {pull}315[315].
- Dashboards: Remove time from url_templates {pull}321[321].

==== Added
- Added wildcard matching for allowed origins for frontend {pull}287[287].
- Added rate limit per IP for frontend {pull}257[257].
- Allow null for all optional fields {pull}253[253].
- Make context.app.language.version optional {pull}246[246].
- CORS support for frontend {pull}244[244].
- Added support for frontend {pull}227[227].
- Show transaction.result in Requests per Minute {pull}226[226].
- Added Kibana 5.6 compatible dashboards {pull}208[208].
- Send document to output on start of server {pull}117[117].
- Log frontend status at startup  {pull}284[284].

==== Deprecated

==== Known Issues

