@@ -43,6 +43,18 @@
             "type": "string",
             "description": "Keyword of specific relevance in the service's domain (eg: 'request', 'backgroundjob', etc)",
             "maxLength": 1024
+        },
+        "marks": {
+            "type": ["object", "null"],
+            "description": "A mark captures the timing of a significant event during the lifetime of a transaction. Marks are organized into groups and can be set by the user or the agent.",
+            "regexProperties": true,
+            "patternProperties": {
+                "^[^.*\"]*$": { 
+                    "$ref": "mark.json",
+                    "maxLength": 1024
+                }
+            },
+            "additionalProperties": false
         }
     },
     "required": ["id", "name", "duration", "type", "timestamp"]
