@@ -109,6 +109,13 @@
                     "us": 32592
                 },
                 "id": "945254c5-67a5-417e-8a4e-aa29efcbfb79",
+                "marks": {
+                    "navigationTiming": {
+                        "appBeforeBootstrap": 608.9300000000001,
+                        "navigationStart": -21
+                    },
+                    "performance": {}
+                },
                 "name": "GET /api/types",
                 "result": "success",
                 "type": "request"
